[gd_scene load_steps=10 format=2]

[ext_resource path="res://krita/reppuken_boss_gura.png" type="Texture" id=1]
[ext_resource path="res://script/Reppuken.gd" type="Script" id=2]
[ext_resource path="res://preJump2.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/missileBlock02.wav" type="AudioStream" id=4]

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 1, -0.5, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 9.0
color = Color( 0.937255, 0.87451, 0.352941, 1 )
hue_variation = -0.12
hue_variation_random = 0.47

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90, 112 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ReppukenBossGura:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.992157, 0.941176, 0.52549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ReppukenBossGura:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ReppukenBossGura:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "reppuken"
tracks/0/type = "value"
tracks/0/path = NodePath("ReppukenBossGura:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "stagger"
tracks/0/type = "value"
tracks/0/path = NodePath("ReppukenBossGura:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ), Color( 0.992157, 0.941176, 0.52549, 1 ), Color( 0.945098, 0.505882, 0.266667, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("ReppukenBossGura:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ReppukenBossGura:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Reppuken" type="RigidBody2D" groups=["reppuken"]]
position = Vector2( 2064, 400 )
collision_layer = 0
collision_mask = 33
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -1 )
amount = 64
lifetime = 10.0
speed_scale = 8.0
visibility_rect = Rect2( -4000, -4000, 8000, 8000 )
local_coords = false
process_material = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ReppukenBossGura" type="Sprite" parent="."]
modulate = Color( 0.992157, 0.941176, 0.52549, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/reppuken = SubResource( 4 )
anims/stagger = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0

[node name="DelayDedTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Reppuken_body_entered"]
[connection signal="timeout" from="DelayDedTimer" to="." method="_on_DelayDedTimer_timeout"]
